--- a/static/css/style.css
+++ b/static/css/style.css
@@ -179,3 +179,7 @@ table, tbody, tr, td, .table td{
     color:#525174;
     text-align:center;
 }
+
+.svgstitch {
+    cursor: pointer;
+}
